agent-service/_promote/k8s/apply.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  namespace: location-ns
  name: location-ns
---
apiVersion: v1
data:
  .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS0xLmRvY2tlci5pbyI6eyJ1c2VybmFtZSI6Im9qb2FkZW9sYWdhYnJpZWwiLCJwYXNzd29yZCI6IlNhdHVybjQzMiQiLCJlbWFpbCI6Im9qb2FkZW9sYWdhYnJpZWxAZ21haWwuY29tIiwiYXV0aCI6ImIycHZZV1JsYjJ4aFoyRmljbWxsYkRwVFlYUjFjbTQwTXpJayJ9fX0=
kind: Secret
metadata:
  creationTimestamp: "2022-04-19T04:08:17Z"
  name: regcred
  namespace: location-ns
  resourceVersion: "6151391"
  uid: 1c605849-ce31-4c0f-b054-ab65dd0a8990
type: kubernetes.io/dockerconfigjson
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: agent-service-config-map
  namespace: location-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-service
  namespace: location-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: agent-service
  template:
    metadata:
      labels:
        app: agent-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: agent-service
          image: registry-1.docker.io/ojoadeolagabriel/agent-service:latest
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 12345
            timeoutSeconds: 3
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 12345
            timeoutSeconds: 3
            initialDelaySeconds: 70
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          ports:
            - containerPort: 12345
          imagePullPolicy: Always
          envFrom:
            - configMapRef:
                name: agent-service-config-map
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: agent-service
  name: agent-service
  namespace: location-ns
spec:
  ports:
    - port: 12345
      protocol: TCP
      targetPort: 12345
  selector:
    app.kubernetes.io/instance: agent-service
    app.kubernetes.io/name: agent-service
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /poopsy
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 12345
